# rust_model_architecture

./: README.md
server/crates/api/: Cargo.toml
server/crates/api/src/: auth.rs  cors.rs  dependencies.rs  lib.rs  router.rs
server/crates/api/src/contact_inquiries/: get_handlers.rs  mod.rs  post_handlers.rs  schemas.rs
server/crates/api/src/health/: get_handlers.rs  mod.rs
server/crates/graphql_server/: Cargo.toml
server/crates/graphql_server/docs/bruno_api/: opencollection.yml
server/crates/graphql_server/docs/bruno_api/environments/: local.yml
server/crates/graphql_server/docs/bruno_api/mutations/: add_inventory_copy.yml  check_in_copy.yml  close_loan_as_lost.yml  create_catalog_title.yml  declare_copy_lost.yml  finish_copy_maintenance.yml  folder.yml  queue_copy_for_maintenance.yml  restore_lost_copy.yml  start_loan.yml  suspend_member.yml
server/crates/graphql_server/docs/bruno_api/queries/: catalog_title.yml  catalog_titles.yml  folder.yml  inventory_copy.yml  member_account.yml  member_loans.yml
server/crates/graphql_server/src/: main.rs
server/crates/graphql_server/src/router/: auth.rs  dependencies.rs  errors.rs  mod.rs  router.rs
server/crates/graphql_server/src/router/book_copies/: delete_handlers.rs  get_handlers.rs  mod.rs  put_handlers.rs
server/crates/graphql_server/src/router/books/: get_handlers.rs  post_handlers.rs  schemas.rs
server/crates/graphql_server/src/router/graphql/: mod.rs
server/crates/graphql_server/src/router/health/: get_handlers.rs
server/crates/graphql_server/src/router/loans/: get_handlers.rs  post_handlers.rs  schemas.rs
server/crates/graphql_server/src/router/members/: mod.rs  post_handlers.rs  put_handlers.rs  schemas.rs
server/crates/http_server/: Cargo.toml
server/crates/http_server/src/: deps.rs  lib.rs  main.rs
server/crates/http_server/src/router/: auth.rs  errors.rs  mod.rs  router.rs
server/crates/http_server/src/router/book_copies/: delete_handlers.rs  get_handlers.rs  mod.rs  post_handlers.rs  put_handlers.rs  schemas.rs
server/crates/http_server/src/router/books/: get_handlers.rs  mod.rs  post_handlers.rs  schemas.rs
server/crates/http_server/src/router/health/: get_handlers.rs
server/crates/http_server/src/router/lending/: get_handlers.rs  post_handlers.rs
server/crates/http_server/src/router/loans/: get_handlers.rs  mod.rs  post_handlers.rs  schemas.rs
server/crates/http_server/src/router/members/: delete_handlers.rs  get_handlers.rs  post_handlers.rs  put_handlers.rs  schemas.rs
server/crates/http_server/src/router/membership/: delete_handlers.rs  get_handlers.rs  post_handlers.rs  put_handlers.rs
server/crates/infrastructure/: Cargo.toml
server/crates/infrastructure/src/: lib.rs
server/crates/infrastructure/src/llm/: mod.rs  spam_service.rs
server/crates/infrastructure/src/llm_provider/: HOW_TO.md  anthropic.rs  google.rs  mod.rs  openai.rs  port.rs  types.rs
servers/rust/crates/persistence/: Cargo.toml
servers/rust/crates/persistence/.sqlx/: query-16dc4b281c06cef9b667b1c687f889c0b0f36c271e9d04b4dee76e0b7545029c.json  query-1f6d0da203873803f61cfaa9bd00a8bc60b61456b9ad14f51408a25e1590a872.json  query-225e2d2b14a01ff94259b5257138215c329bd852099f754bcd6caac79cfcb1c4.json  query-3be189fe7456b4466025e9a09d6c120e89e75f971f32998aa898f089a17c337e.json  query-45e9956da8aa3e0cbe2ac54e8f39b411efc7e4225a83e2c436eef7300bbcbf07.json  query-6bddbe3a04d22ecf368fe6d39ea59839c0f9aa963f4904c2aab2b12efb8a8310.json  query-9b9ac09bc3e9e0e341d1d931890683df8bb25bcfeb27af6ca08cc3de1b5530d7.json  query-9e0c0987ed6964a21148fe0582fc205d0c304034dc569426f21e527eb12d5fe2.json  query-b3569abc44328b6d3e6c7f0b88773270b72859e9ef16822d88a37e825b8f8731.json  query-ca94237e9fd4dcb7abb55fd55db470528d9706edcf0ec51f51d199a5ea953daa.json  query-f46e82ef2b026c0381ecd12da230539d442950165be2c8ea3045c0d7ff52beff.json  query-f6ad3a7d67dee2c8e5b7e55ae28ba684f9960528723c28530b0fdcdd81759bf4.json
servers/rust/crates/persistence/docs/: status_lookup.md
servers/rust/crates/persistence/src/: lib.rs
servers/rust/crates/persistence/src/book/: mod.rs  read_repo.rs  write_repo.rs
servers/rust/crates/persistence/src/book_copy/: mod.rs  read_repo.rs  write_repo.rs
servers/rust/crates/persistence/src/loan/: mod.rs  read_repo.rs  write_repo.rs
servers/rust/crates/persistence/src/member/: mod.rs  (+2 more)
servers/rust/crates/server_bootstrap/: Cargo.toml
servers/rust/crates/server_bootstrap/src/: config.rs  deps.rs
(+276 files in other folders)
