[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
utoipa-axum = "0.2"
tracing = "0.1"
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
