[package]
name = "graphql_server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
server_bootstrap = { path = "../server_bootstrap" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
