[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
persistence = { path = "../persistence" }
server_bootstrap = { path = "../server_bootstrap" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
utoipa-axum = "0.2"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
