[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
auth_core = { path = "../auth_core" }
server_bootstrap = { path = "../server_bootstrap" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"

