[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
chrono = "0.4"
uuid = "1.0"
anyhow = "1"
